@@ -5,6 +5,8 @@ Amarok ChangeLog
 
 VERSION 2.4-Beta 1
   FEATURES:
+    * Match space-separated search terms in the playlist filter var individually. Thanks
+      Thomas Karpiniec for the patch!
     * Added new context applet for displaying song tab information. Thanks
       Rainer Sigle for the patch!
     * Added ability to set/update Album Artist.
